# raccoon-api

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  env.template
.github/workflows/: docker-publish.yml
config/: Caddyfile  Caddyfile.dev
dumpster/facts/: facts.json  facts_es.json
dumpster/models3d/: racc1.glb  racc1.json  racc2.glb  racc2.json  racc3.glb  racc3.json
src/: facts.rs  games.rs  main.rs  memes.rs  models3d.rs  raccoons.rs  sounds.rs  state.rs  utils.rs  videos.rs  wiki.rs
